--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,4 @@
+def registry = 'https://valaxiy01020.jfrog.io/'
 pipeline {
     agent {
         node {
@@ -23,6 +24,30 @@ environment {
                  echo "----------- unit test completed ----------"
             }
         }
+         stage("Jar Publish") {
+        steps {
+            script {
+                    echo '<--------------- Jar Publish Started --------------->'
+                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"jfrog_cred"
+                     def properties = "buildid=${env.BUILD_ID},commitid=${GIT_COMMIT}";
+                     def uploadSpec = """{
+                          "files": [
+                            {
+                              "pattern": "jarstaging/(*)",
+                              "target": "valaxy-libs-release/{1}",
+                              "flat": "false",
+                              "props" : "${properties}",
+                              "exclusions": [ "*.sha1", "*.md5"]
+                            }
+                         ]
+                     }"""
+                     def buildInfo = server.upload(uploadSpec)
+                     buildInfo.env.collect()
+                     server.publishBuildInfo(buildInfo)
+                     echo '<--------------- Jar Publish Ended --------------->'  
+             }
+        }   
+    }
  }
 
 }
