--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-def registry = 'https://valaxiy01020.jfrog.io/'
+def registry = 'https://valaxy1431.jfrog.io/'
 pipeline {
     agent {
         node {
@@ -34,7 +34,7 @@ environment {
                           "files": [
                             {
                               "pattern": "jarstaging/(*)",
-                              "target": "v-libs-release-local/+{1}",
+                              "target": "valaxy-libs-release-local/+{1}",
                               "flat": "false",
                               "props" : "${properties}",
                               "exclusions": [ "*.sha1", "*.md5"]
