--- a/jenkinsfile
+++ b/jenkinsfile
@@ -70,6 +70,15 @@ environment {
             }
         }
     }
+     stage(" Deploy ") {
+       steps {
+         script {
+            echo '<--------------- Helm Deploy Started --------------->'
+            sh 'helm install ttrend ttrend-0.1.0.tgz'
+            echo '<--------------- Helm deploy Ends --------------->'
+         }
+       }
+     }
     }
 }
 
